restarted project with correct database references

--- a/BangazonMVC/src/BangazonMVC/Views/Customers/Details.cshtml
+++ b/BangazonMVC/src/BangazonMVC/Views/Customers/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNUmber)
+            @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PhoneNUmber)
+            @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.PostalCode)
