--- a/BangazonMVC/src/BangazonMVC/Views/Customers/Create.cshtml
+++ b/BangazonMVC/src/BangazonMVC/Views/Customers/Create.cshtml
@@ -33,10 +33,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="PhoneNUmber" class="col-md-2 control-label"></label>
+            <label asp-for="PhoneNumber" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="PhoneNUmber" class="form-control" />
-                <span asp-validation-for="PhoneNUmber" class="text-danger" />
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
